@@ -43,9 +43,9 @@ public class NfsConfiguration extends HdfsConfiguration {
             Nfs3Constant.NFS_EXPORTS_CACHE_EXPIRYTIME_MILLIS_KEY),
         new DeprecationDelta("hadoop.nfs.userupdate.milly",
             IdMappingConstant.USERGROUPID_UPDATE_MILLIS_KEY),
-        new DeprecationDelta(Nfs3Constant.NFS_USERGROUP_UPDATE_MILLIS_KEY,
+        new DeprecationDelta("nfs.usergroup.update.millis",
             IdMappingConstant.USERGROUPID_UPDATE_MILLIS_KEY),
-        new DeprecationDelta(Nfs3Constant.NFS_STATIC_MAPPING_FILE_KEY,
+        new DeprecationDelta("nfs.static.mapping.file",
             IdMappingConstant.STATIC_ID_MAPPING_FILE_KEY),
         new DeprecationDelta("dfs.nfs3.enableDump",
             NfsConfigKeys.DFS_NFS_FILE_DUMP_KEY),
