@@ -33,6 +33,8 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11186. documentation should talk about
     hadoop.htrace.spanreceiver.classes, not hadoop.trace.spanreceiver.classes (cmccabe)
 
+    HADOOP-11247. Fix a couple javac warnings in NFS. (Brandon Li via wheat9)
+
 Release 2.6.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
